# devenvs

./: README.md
cpp-competition/: docker-compose.yaml  env.yaml
cpp-competition/src/: example.cpp  input.txt
cpp-jupyterlab/: Dockerfile  env.yaml
ijava-jupyterlab/: Dockerfile  env.yaml
ijava-jupyterlab/notebooks/: Example.ipynb
java/: Dockerfile  env.yaml
java/src/: Main.java
jekyll/: Gemfile  jekyll_run.sh
latex/: latex-docker-build.sh
python-jupyterlab-bokeh/: Dockerfile  docker-compose.yaml  env.yaml
python-jupyterlab-bokeh/notebooks/: Notebook.ipynb
python-jupyterlab-nlp/: Dockerfile  env.yaml
python-poetry/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
python-poetry/src/app/: hello.py
python-poetry/src/test/: test_hello.py
