[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <e.mail@mail.com>"]

[tool.poetry.dev-dependencies]
black = "*"
pipenv-to-requirements = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
